--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,41 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HOME1</title>
+<style type="text/css">
+	* {margin: 0;}
+	div {width: 100%; height: 50px; float: left;}
+	.bg1 {background-color: red;}
+	.bg2 {background-color: green;}
+	.bg3 {background-color: yellow;}
+	
+	@media only screen and (min-width: 834px) {
+		div {width: calc(100% / 3); height: calc(100vw / 3);}
+	}
+	@media only screen and (min-width: 1080px) {
+		div {width: calc(100% / 5); height: calc(100vw / 5);}
+	}
+</style>
 </head>
 <body>
-	<h1>안녕하세요</h1>
+	<div class="bg1"></div>
+	<div class="bg2"></div>
+	<div class="bg3"></div>
+	<div class="bg1"></div>
+	<div class="bg2"></div>
+	<div class="bg3"></div>
+	<div class="bg1"></div>
+	<div class="bg2"></div>
+	<div class="bg3"></div>
+	<div class="bg1"></div>
+	<div class="bg2"></div>
+	<div class="bg3"></div>
+	<div class="bg1"></div>
+	<div class="bg2"></div>
+	<div class="bg3"></div>
+	<div class="bg1"></div>
+	<div class="bg2"></div>
+	<div class="bg3"></div>	
 </body>
 </html>
