--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,13 +6,16 @@
 <title>HOME1</title>
 <style type="text/css">
 	* {margin: 0;}
-	div {width: 100%; height: 50px; float: left;}
+	div {width: 100%; height: 100px; float: left;}
 	.bg1 {background-color: red;}
 	.bg2 {background-color: green;}
 	.bg3 {background-color: yellow;}
+	#a {background-color: black;}
 	
 	@media only screen and (min-width: 834px) {
-		div {width: calc(100% / 3); height: calc(100vw / 3);}
+/* 		div {width: calc(100% / 3); height: calc(100vw / 3);} */
+		div.l2 {width: calc(100% / 2); height: 100px;}
+		div.l3 {width: calc(100% / 3); height: 100px;}
 	}
 	@media only screen and (min-width: 1080px) {
 		div {width: calc(100% / 5); height: calc(100vw / 5);}
@@ -20,23 +23,26 @@
 </style>
 </head>
 <body>
-	<div class="bg1"></div>
-	<div class="bg2"></div>
-	<div class="bg3"></div>
-	<div class="bg1"></div>
-	<div class="bg2"></div>
-	<div class="bg3"></div>
-	<div class="bg1"></div>
-	<div class="bg2"></div>
-	<div class="bg3"></div>
-	<div class="bg1"></div>
-	<div class="bg2"></div>
-	<div class="bg3"></div>
-	<div class="bg1"></div>
-	<div class="bg2"></div>
-	<div class="bg3"></div>
-	<div class="bg1"></div>
-	<div class="bg2"></div>
-	<div class="bg3"></div>	
+	<div class="bg1 l2"></div>
+	<div class="bg2 l2"></div>
+	<div class="bg3 l3"></div>
+	<div class="bg1 l3"></div>
+	<div class="bg2 l3"></div>
+	<div class="bg1 l2"></div>
+	<div class="bg2 l2"></div>
+	<div class="bg3 l3"></div>
+	<div class="bg1 l3"></div>
+	<div class="bg2 l3"></div>
+	<div class="bg1 l2"></div>
+	<div class="bg2 l2"></div>
+	<div class="bg3 l3"></div>
+	<div class="bg1 l3"></div>
+	<div class="bg2 l3"></div>
+	<div class="bg1 l2"></div>
+	<div class="bg2 l2"></div>
+	<div class="bg3 l3"></div>
+	<div class="bg1 l3"></div>
+	<div class="bg2 l3"></div>
+	
 </body>
 </html>
