정렬2 디스플레이 flex 사용

--- a/src/main/resources/static/page2.html
+++ b/src/main/resources/static/page2.html
@@ -6,8 +6,8 @@
 <style type="text/css">
 	* {margin: 0; box-sizing: border-box;}
 	header {height: 100px; background-color: blue; padding-top: 10px;}
-	main {height: calc(100vh - 200px); background-color: yellow;}
-	footer {height: 100px; background-color: green;}
+	main {background-color: yellow;}
+	footer {height: 100px; background-color: green; clear: both;}
 	
 	header div {height: 80px;}
  	#h {margin-left: 20px; margin-right: 20px;}
