--- a/src/main/resources/static/page3.html
+++ b/src/main/resources/static/page3.html
@@ -6,8 +6,19 @@
 <style type="text/css">
 	* {margin: 0; padding: 0; box-sizing: border-box;}
 	header {height: 100px; background-color: blue;}
-	main {height: calc(100vh - 200px); background-color: yellow;}
+	main {background-color: yellow;}
 	footer {height: 100px; background-color: green;}
+	
+	
+	header div.body {height: 100px; display: flex; justify-content: space-between; align-items: center;}
+	header div div {height: 80px; width: 100px; background-color: orange;}
+	
+	main section {padding-top: 10px;}
+	main section div {height: 200px; background-color: orange;}
+	main section div:nth-child(2) {margin-top: 10px; height: 100px;}
+	
+	ul {list-style-type: none; padding: 0; display: flex; flex-direction: column; gap: 10px;}
+	li {height: 100px; background-color: white;}
 	
 	@media only screen and (min-width: 834px) {
 		
@@ -18,10 +29,25 @@
 </style>
 </head>
 <body>
-	<header></header>
+	<header>
+		<div class="body">
+			<div></div>
+			<div></div>
+		</div>
+	</header>
 	<main>
-		<section></section>
-		<section></section>
+		<section>
+			<div></div>
+			<div></div>
+		</section>
+		<section>
+			<ul>
+				<li>1</li>
+				<li>2</li>
+				<li>3</li>
+				<li>4</li>
+			</ul>
+		</section>
 	</main>
 	<footer></footer>
 </body>
