정렬2 리스트 목록 확인

--- a/src/main/resources/static/page3.html
+++ b/src/main/resources/static/page3.html
@@ -18,10 +18,11 @@
 	main section div:nth-child(2) {margin-top: 10px; height: 100px;}
 	
 	ul {list-style-type: none; padding: 0; display: flex; flex-direction: column; gap: 10px;}
-	li {height: 100px; background-color: white;}
+	li {height: 200px; background-color: white;}
 	
 	@media only screen and (min-width: 834px) {
-		
+		ul {flex-direction: row; flex-wrap: wrap; justify-content: center;}
+ 		li {width: 800px;}
 	}
 	@media only screen and (min-width: 1080px) {
 		
@@ -42,10 +43,10 @@
 		</section>
 		<section>
 			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
 			</ul>
 		</section>
 	</main>
