Vue.js Framwork 화면 처리 적용
https://www.w3schools.com/vue/index.php

https://v3-docs.vuejs-korea.org/

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,8 @@ $(document).ready(() => {
 	const list = [
 		{name: "thymeleaf 방식", url: "/v1/findList"},
 		{name: "jQuery 방식", url: "/v2/findList"},
-		{name: "AngularJS 방식", url: "/v3/"}
+		{name: "AngularJS 방식", url: "/v3/"},
+		{name: "VUE 방식", url: "/v4/findList"}
 	];
 	$("ul").empty();
 	$.each(list, (index, item) => {
